--- a/docs/docs/guides/troubleshooting.mdx
+++ b/docs/docs/guides/troubleshooting.mdx
@@ -72,7 +72,7 @@ If this didn't help, you probably have a dependency that contains already transf
 
 **Solution:** Check if you have rebuilt your app after upgrading `react-native-reanimated`. If you use Expo Go, you must use the exact version which is bundled into Expo SDK.
 
-### Native side failed to resolve JavaScript code version
+### C++ side failed to resolve JavaScript code version
 
 See [Couldn't determine the version of the native part of Reanimated](#couldnt-determine-the-version-of-the-native-part-of-reanimated) and [Unknown version of Reanimated Babel plugin](#unknown-version-of-reanimated-babel-plugin).
 
@@ -86,23 +86,23 @@ See (Mismatch between JavaScript part and native part of Reanimated)[#mismatch-b
 
 **Solution:** Make sure to rebuild your app and see if the problem persists. If it does, feel free to [create an issue on our GitHub](https://github.com/software-mansion/react-native-reanimated/).
 
-### (C++) Mismatch between C++ code version and Java code version
+### Mismatch between C++ code version and Java code version
 
 **Problem:** This happens when Reanimated has different versions of its C++ and Java parts.
 
-**Solution:** See [Native side failed to resolve Java code version](#native-side-failed-to-resolve-java-code-version).
+**Solution:** See [Native side failed to resolve Java code version](#c-side-failed-to-resolve-javas-code-version).
 
-### Native side failed to resolve C++ code version
+### Java side failed to resolve C++ code version
 
 **Problem:** This happens when Reanimated fails to determine the version of its C++ part - most likely because for some reason C++ part hasn't rebuilt after an upgrade.
 
-**Solution:** See [Native side failed to resolve Java code version](#native-side-failed-to-resolve-java-code-version).
+**Solution:** See [Native side failed to resolve Java code version](#c-side-failed-to-resolve-java-code-version).
 
-### (Java) Mismatch between Java code version and C++ code version
+### Mismatch between Java code version and C++ code version
 
 **Problem:** This happens when Reanimated has different versions of its Java and C++ parts.
 
-**Solution:** See [Native side failed to resolve Java code version](#native-side-failed-to-resolve-java-code-version).
+**Solution:** See [Native side failed to resolve Java code version](#c-side-failed-to-resolve-java-code-version).
 
 ### Multiple versions of Reanimated were detected
 
