--- a/docs/docs/device/useReducedMotion.mdx
+++ b/docs/docs/device/useReducedMotion.mdx
@@ -2,7 +2,6 @@
 id: useReducedMotion
 title: useReducedMotion
 sidebar_label: useReducedMotion
-sidebar_position: 4
 ---
 
 `useReducedMotion` lets you query the reduced motion system setting. You can use it to disable animations.
@@ -42,7 +41,7 @@ import UseReducedMotionSrc from '!!raw-loader!@site/src/examples/UseReducedMotio
 ## Remarks
 
 - Changing the reduced motion system setting doesn't cause your components to rerender.
-- In contrast to [`AccessibilityInfo.isReduceMotionEnabled()`](https://reactnative.dev/docs/accessibilityinfo#isreducemotionenabled) the `useReduceMotion` hook lets you get the value synchronously.
+- In contrast to [`AccessibilityInfo.isReduceMotionEnabled()`](https://reactnative.dev/docs/accessibilityinfo#isreducemotionenabled) the `useReducedMotion` hook lets you get the value synchronously.
 
 ## Platform compatibility
 
