Add `Reduced Motion` to docs (#4946)
## Summary

This PR extends the docs with information about the api related to
`Reduced Motion`. I changed the `docs/package.json` to use a specific
nightly build, so the docs can be released immediately.

## Test plan

---------

Co-authored-by: kacperkapusciak <kacper.kapusciak@swmansion.com>

--- a/docs/docs/animations/withDelay.mdx
+++ b/docs/docs/animations/withDelay.mdx
@@ -25,8 +25,15 @@ type AnimatableValue = number | string | number[];
 
 function withDelay<T extends AnimatableValue>(
   delayMs: number,
-  delayedAnimation: T
+  delayedAnimation: T,
+  reduceMotion?: ReduceMotion
 ): T;
+
+enum ReduceMotion {
+  System = 'system',
+  Always = 'always',
+  Never = 'never',
+}
 ```
 
 </details>
@@ -40,6 +47,10 @@ Duration (in milliseconds) before the animation starts.
 #### `delayedAnimation`
 
 Animation to delay.
+
+#### `reduceMotion` <Optional />
+
+A parameter that determines how the animation responds to the device's reduced motion accessibility setting.
 
 ### Returns
 
