--- a/docs/docs/animations/withSpring.mdx
+++ b/docs/docs/animations/withSpring.mdx
@@ -36,6 +36,7 @@ interface WithSpringConfig {
   restSpeedThreshold?: number;
   restDisplacementThreshold?: number;
   velocity?: number;
+  reduceMotion?: ReduceMotion;
 }
 
 function withSpring<T extends AnimatableValue>(
@@ -43,6 +44,12 @@ function withSpring<T extends AnimatableValue>(
   config?: WithSpringConfig,
   callback?: (finished?: boolean, current?: AnimatableValue) => void
 ): T;
+
+enum ReduceMotion {
+  System = 'system',
+  Always = 'always',
+  Never = 'never',
+}
 ```
 
 </details>
@@ -63,17 +70,18 @@ import { useSpringPlayground } from '@site/src/components/InteractivePlayground'
 
 Available properties:
 
-| Name                      | Type      | Default | Description                                                                                                               |
-| ------------------------- | --------- | ------- | ------------------------------------------------------------------------------------------------------------------------- |
-| mass                      | `number`  | 1       | The weight of the spring. Reducing this value makes the animation faster.                                                 |
-| damping                   | `number`  | 10      | How quickly a spring slows down. Higher damping means the spring will come to rest faster.                                |
-| duration                  | `number`  | 2000    | Length of the animation (in milliseconds).                                                                                |
-| dampingRatio              | `number`  | 0.5     | How damped the spring is. Value `1` means the spring is critically damped, and value `>1` means the spring is overdamped. |
-| stiffness                 | `number`  | 100     | How bouncy the spring is.                                                                                                 |
-| velocity                  | `number`  | 0       | Initial velocity applied to the spring equation.                                                                          |
-| overshootClamping         | `boolean` | false   | Whether a spring can bounce over the `toValue`.                                                                           |
-| restDisplacementThreshold | `number`  | 0.01    | The displacement below which the spring will snap to `toValue` without further oscillations.                              |
-| restSpeedThreshold        | `number`  | 2       | The speed in pixels per second from which the spring will snap to `toValue` without further oscillations.                 |
+| Name                      | Type           | Default               | Description                                                                                                               |
+| ------------------------- | -------------- | --------------------- | ------------------------------------------------------------------------------------------------------------------------- |
+| mass                      | `number`       | 1                     | The weight of the spring. Reducing this value makes the animation faster.                                                 |
+| damping                   | `number`       | 10                    | How quickly a spring slows down. Higher damping means the spring will come to rest faster.                                |
+| duration                  | `number`       | 2000                  | Length of the animation (in milliseconds).                                                                                |
+| dampingRatio              | `number`       | 0.5                   | How damped the spring is. Value `1` means the spring is critically damped, and value `>1` means the spring is overdamped. |
+| stiffness                 | `number`       | 100                   | How bouncy the spring is.                                                                                                 |
+| velocity                  | `number`       | 0                     | Initial velocity applied to the spring equation.                                                                          |
+| overshootClamping         | `boolean`      | false                 | Whether a spring can bounce over the `toValue`.                                                                           |
+| restDisplacementThreshold | `number`       | 0.01                  | The displacement below which the spring will snap to `toValue` without further oscillations.                              |
+| restSpeedThreshold        | `number`       | 2                     | The speed in pixels per second from which the spring will snap to `toValue` without further oscillations.                 |
+| reduceMotion <Optional /> | `ReduceMotion` | `ReduceMotion.System` | A parameter that determines how the animation responds to the device's reduced motion accessibility setting.              |
 
 :::info
 The `mass` and `damping` (physics-based) properties can't be used at the same time as `duration` and `dampingRatio` (duration-based).
