--- a/docs/docs/animations/withDecay.mdx
+++ b/docs/docs/animations/withDecay.mdx
@@ -39,12 +39,19 @@ interface WithDecayConfig {
   velocityFactor?: number;
   rubberBandEffect?: boolean;
   rubberBandFactor?: number;
+  reduceMotion?: ReduceMotion;
 }
 
 function withDecay(
   userConfig: WithDecayConfig,
   callback?: (finished?: boolean, current?: AnimatableValue) => void
 ): number;
+
+enum ReduceMotion {
+  System = 'system',
+  Always = 'always',
+  Never = 'never',
+}
 ```
 
 </details>
@@ -57,14 +64,15 @@ The decay animation configuration.
 
 Available properties:
 
-| Name                          | Type               | Default | Description                                                                                                                                                 |
-| ----------------------------- | ------------------ | ------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| velocity <Optional />         | `number`           | 0       | Initial velocity of the animation.                                                                                                                          |
-| deceleration <Optional />     | `number`           | 0.998   | The rate at which the velocity decreases over time.                                                                                                         |
-| clamp <Optional />            | `[number, number]` | []      | Array of two numbers which restricts animation's range. Animation stops when either bound is reached unless the `rubberBandEffect` option is set to `true`. |
-| velocityFactor <Optional />   | `number`           | 1       | Velocity multiplier.                                                                                                                                        |
-| rubberBandEffect <Optional /> | `boolean`          | false   | Makes the animation bounce over the limit specified in `clamp`.                                                                                             |
-| rubberBandFactor <Optional /> | `number`           | 0.6     | Strength of the rubber band effect.                                                                                                                         |
+| Name                          | Type               | Default               | Description                                                                                                                                                 |
+| ----------------------------- | ------------------ | --------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| velocity <Optional />         | `number`           | 0                     | Initial velocity of the animation.                                                                                                                          |
+| deceleration <Optional />     | `number`           | 0.998                 | The rate at which the velocity decreases over time.                                                                                                         |
+| clamp <Optional />            | `[number, number]` | []                    | Array of two numbers which restricts animation's range. Animation stops when either bound is reached unless the `rubberBandEffect` option is set to `true`. |
+| velocityFactor <Optional />   | `number`           | 1                     | Velocity multiplier.                                                                                                                                        |
+| rubberBandEffect <Optional /> | `boolean`          | false                 | Makes the animation bounce over the limit specified in `clamp`.                                                                                             |
+| rubberBandFactor <Optional /> | `number`           | 0.6                   | Strength of the rubber band effect.                                                                                                                         |
+| reduceMotion <Optional />     | `ReduceMotion`     | `ReduceMotion.System` | A parameter that determines how the animation responds to the device's reduced motion accessibility setting.                                                |
 
 #### `callback` <Optional />
 
