--- a/docs/docs/advanced/setNativeProps.mdx
+++ b/docs/docs/advanced/setNativeProps.mdx
@@ -4,7 +4,7 @@ sidebar_position: 7
 
 # setNativeProps
 
-`setNativeProps` lets you directly update component properties from the [UI thread](/docs/fundamentals/glossary#ui-thread).
+`setNativeProps` lets you imperatively update component properties.
 
 :::caution
 
@@ -26,14 +26,13 @@ function App() {
     runOnUI(() => {
       // highlight-start
       setNativeProps(animatedRef, {
-        opacity: 0,
+        text: '',
       });
       // highlight-end
-      // ...
     })();
   };
 
-  return <Animated.View ref={animatedRef} />;
+  return <TextInput ref={animatedRef} />;
 }
 ```
 
@@ -57,7 +56,7 @@ An [animated ref](/docs/core/useAnimatedRef#returns) connected to the component 
 
 #### `updates`
 
-An object with properties you want to animate.
+An object with properties you want to update. These could be both style props (eg. `width`, `backgroundColor`) and regular props (eg. `text`).
 
 ### Returns
 
@@ -73,6 +72,8 @@ import SetNativePropsSrc from '!!raw-loader!@site/src/examples/SetNativeProps';
 ## Remarks
 
 - You should always reach for [`useAnimatedStyle`](docs/core/useAnimatedStyle) and [`useAnimatedProps`](docs/core/useAnimatedProps) first when animating styles or properties.
+
+- `setNativeProps` is implemented only on the [UI thread](/docs/fundamentals/glossary#ui-thread). When using `setNativeProps` inside [event handlers](https://react.dev/learn/responding-to-events#adding-event-handlers), it has to be wrapped with the [`runOnUI`](/docs/threading/runOnUI) function.
 
 ## Platform compatibility
 
