docs: typo in useAnimatedProps.mdx

--- a/docs/docs/core/useAnimatedProps.mdx
+++ b/docs/docs/core/useAnimatedProps.mdx
@@ -4,7 +4,7 @@ sidebar_position: 3
 
 # useAnimatedProps
 
-`useAnimatedStyle` lets you create an animated props object which can be animated using [shared values](/docs/fundamentals/glossary#shared-value). This object is used to animate properties of third-party components.
+`useAnimatedProps` lets you create an animated props object which can be animated using [shared values](/docs/fundamentals/glossary#shared-value). This object is used to animate properties of third-party components.
 
 For animating style use [`useAnimatedStyle`](/docs/core/useAnimatedStyle) instead.
 
