Apply changes from CR

--- a/docs/docs/threading/createWorkletRuntime.mdx
+++ b/docs/docs/threading/createWorkletRuntime.mdx
@@ -1,18 +1,14 @@
 ---
-sidebar_position: 8
+sidebar_position: 3
 ---
 
 # createWorkletRuntime
 
-`createWorkletRuntime` lets you create a new JS runtime which can be used to run worklets possibly on different threads than JS or UI thread. This function is supposed to be used from other third-party libraries that need to integrate with worklets. The return value represents the runtime and is supposed to be passed to C++ side using JSI (JavaScript Interface) for further operations.
-
-Worklet runtimes come with `console.*` methods installed out-of-the-box. Other APIs (including `performance.now`) are not available and need to be injected into the runtime or captured via worklet closure.
-
-In development mode, all unhandled errors thrown in the runtime (except for those thrown in `initializer`) will be caught and thus logged to the console and displayed in a LogBox.
-
-You can use Chrome DevTools to debug the runtime (Hermes only). The runtime will appear in the devices list as `name` passed to `createWorkletRuntime`.
+`createWorkletRuntime` lets you create a new JS runtime which can be used to run [worklets](/docs/fundamentals/glossary#worklet) possibly on different threads than [JS](/docs/fundamentals/glossary#javascript-thread) or [UI thread](/docs/fundamentals/glossary#ui-thread). This function is supposed to be used by third-party libraries that need to integrate with worklets. The return value represents the runtime and it's supposed to be passed to C++ side using JSI (JavaScript Interface) for further operations.
 
 ## Reference
+
+### Usage in JavaScript
 
 ```jsx
 import { createWorkletRuntime } from 'react-native-reanimated';
@@ -21,6 +17,8 @@ function App() {
   const runtime = createWorkletRuntime('background');
 }
 ```
+
+### Usage in C++
 
 ```cpp
 auto runtime = reanimated::extractWorkletRuntime(rt, runtimeValue);
@@ -62,6 +60,14 @@ An optional worklet that will be run synchronously on the same thread immediatel
 ### Returns
 
 `createWorkletRuntime` returns `WorkletRuntime` which is a `jsi::HostObject<reanimated::WorkletRuntime>`.
+
+## Remarks
+
+- Worklet runtimes come with `console.*` methods installed out-of-the-box. Other APIs (including `performance.now`) are not available and need to be injected into the runtime or captured via worklet closure.
+
+- In development mode, all unhandled errors thrown in the runtime (except for those thrown in `initializer`) will be caught and thus logged to the console and displayed in a LogBox.
+
+- You can use Chrome DevTools to debug the runtime (Hermes only). The runtime will appear in the devices list as `name` passed to `createWorkletRuntime`.
 
 ## Platform compatibility
 
