--- a/docs/docs/threading/runOnUI.mdx
+++ b/docs/docs/threading/runOnUI.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_position: 2
+---
+
 # runOnUI
 
 `runOnUI` lets you asynchronously run [workletized](/docs/fundamentals/glossary#to-workletize) functions on the [UI thread](/docs/fundamentals/glossary#ui-thread).
