--- a/docs/docs/core/useSharedValue.mdx
+++ b/docs/docs/core/useSharedValue.mdx
@@ -88,7 +88,7 @@ function App() {
 
 </Indent>
 
-- When storing objects in shared values, make sure to reassign an object instead of changing the properties individually.
+- When storing objects in a shared value, make sure to reassign an object instead of changing the properties individually.
 
 <Indent>
 
