Add compatibility table

--- a/docs/docs/guides/troubleshooting.mdx
+++ b/docs/docs/guides/troubleshooting.mdx
@@ -102,6 +102,11 @@ After that make sure to run your package manager again, either `yarn` or `npm in
 
 **Solution:** Please upgrade to at least React Native 0.72 or downgrade to an older version of Reanimated 3.
 
+| Reanimated             | React-native |
+| ---------------------- | ------------ |
+| 3.1.0+, fabric enabled | 0.72.0+      |
+| 3.0.0+, fabric enabled | 0.71.0+      |
+
 ## Threading issues
 
 ### Tried to synchronously call a non-worklet function on the UI thread
