--- a/docs/docs/animations/withDecay.mdx
+++ b/docs/docs/animations/withDecay.mdx
@@ -68,7 +68,7 @@ Available properties:
 | ---------------------------------- | ------------------ | --------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | velocity <Optional />              | `number`           | 0                     | Initial velocity of the animation.                                                                                                                                                                          |
 | deceleration <Optional />          | `number`           | 0.998                 | The rate at which the velocity decreases over time.                                                                                                                                                         |
-| clamp <Optional footnote={true} /> | `[number, number]` | []                    | Array of two numbers which restricts animation's range. Animation stops when either bound is reached unless the `rubberBandEffect` option is set to `true`. <br /> \*Required when RubberBandEffect is true |
+| clamp <Optional footnote /> | `[number, number]` | []                    | Array of two numbers which restricts animation's range. Animation stops when either bound is reached unless the `rubberBandEffect` option is set to `true`. <br /> \*Required when `rubberBandEffect` is set to `true`. |
 | velocityFactor <Optional />        | `number`           | 1                     | Velocity multiplier.                                                                                                                                                                                        |
 | rubberBandEffect <Optional />      | `boolean`          | false                 | Makes the animation bounce over the limit specified in `clamp`.                                                                                                                                             |
 | rubberBandFactor <Optional />      | `number`           | 0.6                   | Strength of the rubber band effect.                                                                                                                                                                         |
