fix: extrapolation import

--- a/docs/docs/utilities/interpolate.mdx
+++ b/docs/docs/utilities/interpolate.mdx
@@ -68,6 +68,7 @@ import Animated, {
   useAnimatedScrollHandler,
   useAnimatedStyle,
   interpolate,
+  Extrapolation,
 } from 'react-native-reanimated';
 
 export const HEADER_IMAGE_HEIGHT = Dimensions.get('window').width / 3;
