Fix broken links part1

--- a/docs/versioned_docs/version-2.x/tutorials/LayoutAnimations/animated_list.mdx
+++ b/docs/versioned_docs/version-2.x/tutorials/LayoutAnimations/animated_list.mdx
@@ -78,7 +78,7 @@ Here you can see the effect of the changes we will make going through this tutor
 <TutorialStep title="Step 2">
   <div>
     Now let's add an entering animation. There is plenty of available&nbsp;
-    <a href="https://docs.swmansion.com/react-native-reanimated/docs/api/LayoutAnimations/entryAnimations">
+    <a href="https://docs.swmansion.com/react-native-reanimated/docs/2.x/api/LayoutAnimations/entryAnimations">
       predefined animations
     </a>
     &nbsp;that we can choose from. We will go with the LightSpeedInLeft effect.
@@ -111,7 +111,7 @@ Here you can see the effect of the changes we will make going through this tutor
 <TutorialStep title="Step 4">
   <div>
     Now let's add an exiting animation. Again there are many&nbsp;
-    <a href="https://docs.swmansion.com/react-native-reanimated/docs/api/LayoutAnimations/exitingAnimations">
+    <a href="https://docs.swmansion.com/react-native-reanimated/docs/2.x/api/LayoutAnimations/exitAnimations">
       predefined animations
     </a>
     &nbsp; we can choose from. We will go with the LightSpeedOutRight effect.
