Add missing variants

--- a/docs/docs/guides/troubleshooting.mdx
+++ b/docs/docs/guides/troubleshooting.mdx
@@ -102,10 +102,12 @@ After that make sure to run your package manager again, either `yarn` or `npm in
 
 **Solution:** Please upgrade to at least React Native 0.72 or downgrade to an older version of Reanimated 3.
 
-| Reanimated             | React-native |
-| ---------------------- | ------------ |
-| 3.1.0+, fabric enabled | 0.72.0+      |
-| 3.0.0+, fabric enabled | 0.71.0+      |
+| Reanimated | New Architecture enabled             | React-native |
+| ---------- | ------------------------------------ | ------------ |
+| 3.1.0      | ✅                                   | 0.72.0+      |
+| 3.0.0      | ✅                                   | 0.71.0+      |
+| 3.0.0      | ❌                                   | any          |
+| 2.0.0      | ❌ New Architecture is not supported | any          |
 
 ## Threading issues
 
